--- a/package.json
+++ b/package.json
@@ -10,7 +10,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@tailwindcss/postcss7-compat": "^2.0.2",
+    "autoprefixer": "^9",
     "core-js": "^3.6.5",
+    "moment": "^2.29.1",
+    "postcss": "^7",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.2",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0"
@@ -31,6 +36,9 @@
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-vue": "^7.0.0",
     "typescript": "~3.9.3",
+    "vue-cli-plugin-fontawesome": "^0.3.1",
+    "vue-cli-plugin-moment": "^0.1.1",
+    "vue-cli-plugin-tailwind": "^2.0.6",
     "vue-jest": "^5.0.0-0"
   }
 }
